plugins {
    id 'application'
}

group 'ai.quod'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

apply plugin: 'application'

test {
    testLogging {
        outputs.upToDateWhen {false}
        showStandardStreams = true
    }
    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "4g"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=2048m'
}

application {
  // URI of your main class/application's entry point (required)
  mainClassName = 'HealthScoreCalculator'
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    testCompile group: 'org.mock-server', name: 'mockserver-netty', version: '3.9.1'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.29'
    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.29'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'commons-codec', name: 'commons-codec', version: '1.13'
    compile group: 'org.springframework', name: 'spring-core', version: '5.2.1.RELEASE'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.0'

}


